style(index, css): improve tile layout and responsive design
- Wrap tile icons in separate divs for better styling control
- Add hover effects and subtle animations to tiles
- Implement responsive grid adjustments for mobile devices
- Add gradient borders and visual enhancements to sections
- Use clamp() for responsive font sizing on headings
- Improve mobile navigation layout with grid-based actions

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
 
         <img class="divider" src="assets/svg/divider-wave.svg" alt="">
-        <section class="section" id="comes-with">
+        <section class="section comes-with" id="comes-with">
             <div class="section-head">
                 <span class="eyebrow">What Comes With Foodlay</span>
                 <h2>Complete launch package</h2>
@@ -85,15 +85,18 @@
                     <div>Websites</div>
                     <div class="muted">Conversion‑focused storefronts</div>
                 </div>
-                <div class="tile"><img class="icon-svg" src="assets/svg/icon-admin.svg" alt="">
+                <div class="tile">
+                    <div class="icon"><img class="icon-svg" src="assets/svg/icon-admin.svg" alt=""></div>
                     <div>Admin Panel</div>
                     <div class="muted">Zones, menus, orders & reporting</div>
                 </div>
-                <div class="tile"><img class="icon-svg" src="assets/svg/icon-customer.svg" alt="">
+                <div class="tile">
+                    <div class="icon"><img class="icon-svg" src="assets/svg/icon-customer.svg" alt=""></div>
                     <div>Customer App</div>
                     <div class="muted">Delightful ordering & tracking</div>
                 </div>
-                <div class="tile"><img class="icon-svg" src="assets/svg/icon-delivery.svg" alt="">
+                <div class="tile">
+                    <div class="icon"><img class="icon-svg" src="assets/svg/icon-delivery.svg" alt=""></div>
                     <div>Deliveryman App</div>
                     <div class="muted">Efficient assignments & navigation</div>
                 </div>
