chore: update documentation and APK download URLs
Update the base documentation URL from Vercel to the primary domain.
Change customer and delivery APK download links to point to the new storage location.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div>Foodlay Complete Solution</div>
             </div>
             <div class="nav-actions">
-                <a class="btn" href="https://foodlay-complete-solution-doc.vercel.app" target="_blank"
+                <a class="btn" href="https://foodlay-doc.dayonesoft.com" target="_blank"
                     rel="noopener">Documentation</a>
                 <a class="btn btn-primary" href="#explore">Explore Suite</a>
             </div>
@@ -47,8 +47,8 @@
                         multi‑restaurant operations, real‑time tracking, and reliable payments.</p>
                     <div class="hero-ctas">
                         <a class="btn btn-primary" href="#explore">Start Exploring</a>
-                        <a class="btn" id="visitDocsTop" href="https://foodlay-complete-solution-doc.vercel.app"
-                            target="_blank" rel="noopener">View Docs</a>
+                        <a class="btn" id="visitDocsTop" href="https://foodlay-doc.dayonesoft.com" target="_blank"
+                            rel="noopener">View Docs</a>
                     </div>
                     <div class="card-actions" style="margin-top:10px;">
                         <span class="badge">Fast go‑live</span>
@@ -125,10 +125,10 @@
                     </ul>
                     <div class="card-actions">
                         <a class="btn btn-primary" id="admin-open"
-                            href="https://foodlay-complete-solution-doc.vercel.app" target="_blank"
+                            href="https://foodlay.dayonesoft.com/admin/auth/login" target="_blank"
                             rel="noopener">Open</a>
-                        <a class="btn" id="admin-docs" href="https://foodlay-complete-solution-doc.vercel.app"
-                            target="_blank" rel="noopener">Docs</a>
+                        <a class="btn" id="admin-docs" href="https://foodlay-doc.dayonesoft.com" target="_blank"
+                            rel="noopener">Docs</a>
                     </div>
                 </div>
                 <div class="card" id="card-store">
@@ -144,11 +144,10 @@
                         <li>Order tracking & notifications</li>
                     </ul>
                     <div class="card-actions">
-                        <a class="btn btn-primary" id="store-open"
-                            href="https://foodlay-complete-solution-doc.vercel.app" target="_blank"
+                        <a class="btn btn-primary" id="store-open" href="https://foodlay.dayonesoft.com" target="_blank"
                             rel="noopener">Open</a>
-                        <a class="btn" id="store-docs" href="https://foodlay-complete-solution-doc.vercel.app"
-                            target="_blank" rel="noopener">Docs</a>
+                        <a class="btn" id="store-docs" href="https://foodlay-doc.dayonesoft.com" target="_blank"
+                            rel="noopener">Docs</a>
                     </div>
                 </div>
                 <div class="card" id="card-customer">
@@ -165,10 +164,10 @@
                     </ul>
                     <div class="card-actions">
                         <a class="btn btn-primary" id="customer-open"
-                            href="https://foodlay-complete-solution-doc.vercel.app" target="_blank"
-                            rel="noopener">Download APK</a>
-                        <a class="btn" id="customer-docs" href="https://foodlay-complete-solution-doc.vercel.app"
-                            target="_blank" rel="noopener">Docs</a>
+                            href="https://6am-storage.sgp1.digitaloceanspaces.com/DayOneSoft/Demo%20Apks/FoodLay/V1.0/FoodLay%20V1.0.apk"
+                            target="_blank" rel="noopener">Download APK</a>
+                        <a class="btn" id="customer-docs" href="https://foodlay-doc.dayonesoft.com" target="_blank"
+                            rel="noopener">Docs</a>
                     </div>
                 </div>
                 <div class="card" id="card-delivery">
@@ -185,10 +184,10 @@
                     </ul>
                     <div class="card-actions">
                         <a class="btn btn-primary" id="delivery-open"
-                            href="https://foodlay-complete-solution-doc.vercel.app" target="_blank"
-                            rel="noopener">Download APK</a>
-                        <a class="btn" id="delivery-docs" href="https://foodlay-complete-solution-doc.vercel.app"
-                            target="_blank" rel="noopener">Docs</a>
+                            href="https://6am-storage.sgp1.digitaloceanspaces.com/DayOneSoft/Demo%20Apks/FoodLay/V1.0/FoodLay%20Delivery%20Man%20V1.0.apk"
+                            target="_blank" rel="noopener">Download APK</a>
+                        <a class="btn" id="delivery-docs" href="https://foodlay-doc.dayonesoft.com" target="_blank"
+                            rel="noopener">Docs</a>
                     </div>
                 </div>
             </div>
