--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
 
         <footer class="footer">
-            <div>© Foodlay Suite</div>
+            <div>© Foodlay 2026</div>
             <div>Built for speed, reliability, and scale</div>
         </footer>
     </div>
