docs: update button text from "Download APK" to "Download Demo APK"
Update the call-to-action text for both the Customer App and Deliveryman App download buttons to more accurately reflect that the provided APK is a demo version. This clarifies the nature of the downloadable file for users.

--- a/index.html
+++ b/index.html
@@ -156,16 +156,18 @@
                         <div class="icon"><img class="icon-svg" src="assets/svg/icon-customer.svg" alt=""></div>
                         <div>Customer App</div>
                     </div>
+
                     <p>Native shopping experience customers love — fast, secure, and personal.</p>
                     <ul class="mini-list">
                         <li>Smart search & recommendations</li>
                         <li>Multiple payments & wallets</li>
                         <li>Live delivery status updates</li>
                     </ul>
+
                     <div class="card-actions">
                         <a class="btn btn-primary" id="customer-open" 
                             href="https://6am-storage.sgp1.digitaloceanspaces.com/DayOneSoft/Demo%20Apks/FoodLay/V1.0/FoodLay%20V1.0.apk"
-                            target="_blank" rel="noopener">Download APK</a>
+                            target="_blank" rel="noopener">Download Demo APK</a>
                         <a class="btn" id="customer-docs" href="https://foodlay-doc.dayonesoft.com" target="_blank"
                             rel="noopener">Docs</a>
                     </div>
@@ -176,16 +178,19 @@
                         <div class="icon"><img class="icon-svg" src="assets/svg/icon-delivery.svg" alt=""></div>
                         <div>Deliveryman App</div>
                     </div>
+
                     <p>Everything couriers need — clear tasks, optimized routes, and earnings.</p>
                     <ul class="mini-list">
                         <li>Routing & navigation</li>
                         <li>Status updates & proof of delivery</li>
                         <li>Earnings tracking & payouts</li>
                     </ul>
+
                     <div class="card-actions">
                         <a class="btn btn-primary" id="delivery-open"
                             href="https://6am-storage.sgp1.digitaloceanspaces.com/DayOneSoft/Demo%20Apks/FoodLay/V1.0/FoodLay%20Delivery%20Man%20V1.0.apk"
-                            target="_blank" rel="noopener">Download APK</a>
+                            target="_blank" rel="noopener">Download Demo APK</a>
+
                         <a class="btn" id="delivery-docs" href="https://foodlay-doc.dayonesoft.com" target="_blank"
                             rel="noopener">Docs</a>
                     </div>
