refactor: remove unused id attributes from download buttons
The id attributes "customer-open" and "delivery-open" were not being used
in the codebase, likely remnants from previous functionality. Removing them
cleans up the HTML and improves maintainability.

--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
                     </ul>
 
                     <div class="card-actions">
-                        <a class="btn btn-primary" id="customer-open" 
+                        <a class="btn btn-primary"
                             href="https://6am-storage.sgp1.digitaloceanspaces.com/DayOneSoft/Demo%20Apks/FoodLay/V1.0/FoodLay%20V1.0.apk"
-                            target="_blank" rel="noopener">Download Demo APK</a>
+                            target="_blank" rel="noopener">Download APK</a>
                         <a class="btn" id="customer-docs" href="https://foodlay-doc.dayonesoft.com" target="_blank"
                             rel="noopener">Docs</a>
                     </div>
@@ -187,9 +187,9 @@
                     </ul>
 
                     <div class="card-actions">
-                        <a class="btn btn-primary" id="delivery-open"
+                        <a class="btn btn-primary"
                             href="https://6am-storage.sgp1.digitaloceanspaces.com/DayOneSoft/Demo%20Apks/FoodLay/V1.0/FoodLay%20Delivery%20Man%20V1.0.apk"
-                            target="_blank" rel="noopener">Download Demo APK</a>
+                            target="_blank" rel="noopener">Download APK</a>
 
                         <a class="btn" id="delivery-docs" href="https://foodlay-doc.dayonesoft.com" target="_blank"
                             rel="noopener">Docs</a>
