docs: remove "multi‑" prefix from hero description
The word "multi‑" was removed to make the description more inclusive, as the platform also supports single‑restaurant operations.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="hero-left">
                     <h1>Launch, grow, and scale your food delivery business</h1>
                     <p>One cohesive platform with Admin, Storefront, Customer, and Delivery apps — built for
-                        multi‑restaurant operations, real‑time tracking, and reliable payments.</p>
+                        restaurant operations, real‑time tracking, and reliable payments.</p>
                     <div class="hero-ctas">
                         <a class="btn btn-primary" href="#explore">Start Exploring</a>
                         <a class="btn" id="visitDocsTop" href="https://foodlay-doc.dayonesoft.com" target="_blank"
@@ -52,7 +52,7 @@
                     </div>
                     <div class="card-actions" style="margin-top:10px;">
                         <span class="badge">Fast go‑live</span>
-                        <span class="badge">Multi‑restaurant ready</span>
+                        <span class="badge">Restaurant ready</span>
                         <span class="badge">Real‑time tracking</span>
                         <span class="badge">Payments built‑in</span>
                     </div>
